# Prism

./: .gitattributes  .gitignore  .trivy.yaml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: cd.yml  rust.yml
.husky/: commit-msg
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  instance_lock.rs  lib.rs  logging.rs  main.rs  migration.rs  models.rs  note_service.rs  notes.rs  persistence.rs  plugin_protocol.rs  prompt.rs  reminder.rs  shortcuts.rs  store.rs  task_service.rs
src-tauri/src/commands/: ai.rs  config.rs  logging.rs  mod.rs  notes.rs  plugins.rs  prompt.rs  screenshot.rs  sync.rs  tasks.rs  update.rs
src-tauri/src/prompts/: daily-summary.md  execute-auto.md
src/__tests__/: capability-builder.test.ts  context-menu.test.ts  dashboard.test.ts  diagnostics.test.ts  disposable.test.ts  filter-engine.test.ts  module-resolver.test.ts  note-tree.test.ts  plugin-loader.test.ts  plugin-manifest.test.ts  plugin-menus.test.ts  plugin-network.test.ts  plugin-system.test.ts  plugin-tasks.test.ts  plugin-views.test.ts  sync-timeout.test.ts
src/components/: AddVendorModal.vue  AiAssistant.vue  AiCommandPanel.vue  AiFocusBar.vue  Base64Tool.vue  ColorTool.vue  ConfirmDialog.vue  ContextMenu.vue  Dashboard.vue  DatePicker.vue  EmptyState.vue  FloatingWindow.vue  ImportFloating.vue  InputDialog.vue  JsonTool.vue  MarkdownEditor.vue  NoteEditor.vue  (+26 more)
update/: windows.json
(+58 files in other folders)
